--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -113,3 +113,11 @@ html(lang='en')
         // * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
 
         script(src='https://cdn.startbootstrap.com/sb-forms-latest.js')
+
+        // google analytics
+        script(async='', src='https://www.googletagmanager.com/gtag/js?id=G-NGQTCCLV3S"')
+        script.
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+            gtag('config', 'G-NGQTCCLV3S');
