--- a/src/scss/sections/_masthead.scss
+++ b/src/scss/sections/_masthead.scss
@@ -8,9 +8,9 @@
     height: auto;
     min-height: 35rem;
     padding: 15rem 0;
-    background: linear-gradient(to bottom,
+    background: radial-gradient(
         #{fade-out($black, 0.7)} 0%,
-        #{fade-out($black, 0.3)} 75%,
+        #{fade-out($black, 0.3)} 65%,
         $black 100%),
     url("../assets/img/earth-cracked.jpg");
     background-position: center;
