--- a/src/scss/components/_navbar.scss
+++ b/src/scss/components/_navbar.scss
@@ -4,13 +4,13 @@
 
 #mainNav {
     min-height: 3.5rem;
-    background-color: $white;
+    background: linear-gradient(to bottom, black 45%, transparent);
 
     .navbar-toggler {
         font-size: 80%;
         padding: 0.75rem;
-        color: $primary;
-        border: $border-width solid $primary;
+        color: fade-out($white, 0.5);
+        border: $border-width solid fade-out($white, 0.5);
 
         &:focus {
             outline: none;
@@ -18,7 +18,7 @@
     }
 
     .navbar-brand {
-        color: $black;
+        color: fade-out($white, 0.5);
         font-weight: 700;
         padding: 0.9rem 0;
     }
@@ -39,6 +39,20 @@
         }
     }
 
+    .nav-link {
+        transition: none;
+        padding: 2rem 1.5rem;
+        color: fade-out($white, 0.5);
+
+        &:hover {
+            color: fade-out($white, 0.25);
+        }
+
+        &:active {
+            color: $white;
+        }
+    }
+
     @include media-breakpoint-up(lg) {
         padding-top: 0;
         padding-bottom: 0;
@@ -54,7 +68,7 @@
         .nav-link {
             transition: none;
             padding: 2rem 1.5rem;
-            color: fade-out($white, 0.5);
+            color: $white;
 
             &:hover {
                 color: fade-out($white, 0.25);
