testnet link added

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -34,7 +34,7 @@ html(lang='en')
                 #navbarResponsive.collapse.navbar-collapse
                     ul.navbar-nav.ms-auto
                         li.nav-item
-                            a.nav-link(href='#') Launch Testnet App
+                            a.nav-link(href='https://testnet.refactor.earth') Launch Testnet App
 
         // Masthead
         header.masthead
